// Download extension vscode-proto3 to see syntax

syntax = "proto3";

package video_upload;

// The video upload service
service VideoUploadService {
  // Upload a video using client streaming (sends chunks)
  rpc UploadVideo(stream VideoChunk) returns (UploadResponse);

  // Check queue status
  rpc CheckQueueStatus(QueueStatusRequest) returns (QueueStatusResponse);
}

// Metadata sent only with the first chunk
message VideoMetadata {
  string filename = 1;   // Original filename
  int32 producer_id = 2; // Which producer is sending this
  string md5_hash = 3;   // MD5 hash for duplicate detection
}

// A chunk of video data
message VideoChunk {
  int32 chunk_number = 1; // Sequence number of this chunk
  bool is_last = 2;       // Indicator if this is the last chunk

  oneof payload {
    VideoMetadata metadata = 3; // First chunk includes metadata
    bytes data = 4;             // Subsequent chunks only have data
  }
}

// Response after video upload
message UploadResponse {
  bool success = 1;    // Was the upload successful?
  string message = 2;  // Success/error message
  string video_id = 3; // Unique ID assigned to the video
  bool queue_full = 4; // Indicates if the queue was full
}

// Request to check queue status
message QueueStatusRequest {
  // Empty for now
}

// Response with queue status
message QueueStatusResponse {
  int32 current_size = 1; // Current number of items in queue
  int32 max_size = 2;     // Maximum queue capacity
  bool is_full = 3;       // Is queue at capacity?
  float utilization = 4;  // Queue utilization percentage
}
